完成mysql数据库初始化以及python-venv

--- a/backEnd/requirements.txt
+++ b/backEnd/requirements.txt
@@ -1,60 +1,60 @@
-# Flask核心框架
+# Flask core framework
 Flask==2.3.3
 Flask-CORS==4.0.0
 Flask-SQLAlchemy==3.0.5
 
-# 数据库驱动
+# Database driver
 PyMySQL==1.1.0
 pymysql[rsa]==1.1.0
 
-# 数据库迁移工具
+# Database migration tool
 Flask-Migrate==4.0.5
 
-# JWT认证
+# JWT authentication
 PyJWT==2.8.0
 
-# 密码加密
+# Password encryption
 bcrypt==4.0.1
 
-# 向量数据库
+# Vector database
 chromadb==0.4.15
 
-# PDF处理
+# PDF processing
 PyPDF2==3.0.1
 pdfplumber==0.10.3
 
-# 文本处理
+# Text processing
 pypinyin==0.49.0
 
-# HTTP请求
+# HTTP requests
 requests==2.31.0
 
-# 环境变量管理
+# Environment variables management
 python-dotenv==1.0.0
 
-# 日期时间处理
+# Date and time processing
 python-dateutil==2.8.2
 
-# 工具库
+# Utility library
 Werkzeug==2.3.7
 
-# WSGI服务器（生产环境）
+# WSGI server (production)
 gunicorn==21.2.0
 
-# 开发工具
+# Development tools
 ipython==8.15.0
 
-# Embedding模型支持
+# Embedding model support
 sentence-transformers==2.2.2
 torch==2.0.1
 transformers==4.33.0
 
-# OpenAI API支持（可选，用于LLM调用）
+# OpenAI API support (optional, for LLM calls)
 openai==0.28.0
 
-# 数据验证
+# Data validation
 pydantic==2.3.0
 
-# 文件上传处理
+# File upload handling
 python-multipart==0.0.6
 
