--- a/backEnd/requirements.txt
+++ b/backEnd/requirements.txt
@@ -19,9 +19,10 @@ bcrypt==4.0.1
 # Vector database
 chromadb==0.4.15
 
-# PDF processing
+# Document processing
 PyPDF2==3.0.1
 pdfplumber==0.10.3
+python-docx==1.1.0
 
 # Text processing
 pypinyin==0.49.0
